# da-fitibit-fitness-tracker

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
notebooks/: ExploratoryDataAnalysis.ipynb
scripts/: main.py
