[tool.poetry]
name = "your-ml-project"
version = "0.1.0"
description = "A machine learning project using Fitbit data"
authors = ["Andres Felipe Beltran <afbeltranr@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
pandas = "^1.5.0"
numpy = "^1.21.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
cython = "^0.29.33"  # Or the latest version compatible with Python 3.xp